--- a/upload/language/German/website.lng
+++ b/upload/language/German/website.lng
@@ -365,7 +365,7 @@ $lang = array (
 'static_page_err'	=>	"Leider ist die Seite {page} für Sie nicht verfügbar: Möglicherweise wurde ihre Adresse geändert oder sie wurde gelöscht. Bitte verwenden Sie die Suche.",
 'p_del'				=>	"Löschen",
 'mail_complaint'	=>  "Eine Benachrichtigung über die Eingang einer neuen Beschwerde auf der Webseite"
-'mail_complaint_1'	=>  "Diese Benachrichtigung wurde von der Webseite gesendet: {site}\n\nWir informieren Sie, dass Ihnen eine neue Beschwerde von Besuchern Ihrer Webseite zugeflossen ist.\n\nUm die Beschwerde anzeigen und die darauf folgenden Maßnahmen zu treffen, müssen Sie sich in der Verwaltungsseite der Webseite anmelden und in den Bereich \"Liste der Beschwerden\" gehen."
+'mail_complaint_1'	=>  "Diese Benachrichtigung wurde von der Webseite gesendet: {site}\n\nWir informieren Sie, dass Ihnen eine neue Beschwerde von Benutzern Ihrer Webseite zugeflossen ist.\n\nUm die Beschwerde anzeigen und die darauf folgenden Maßnahmen zu treffen, müssen Sie sich in der Verwaltungsseite der Webseite anmelden und in den Bereich \"Liste der Beschwerden\" gehen."
 'reg_err_28'        =>  "Leider können Sie sich nicht auf unserer Webseite registrieren, weil festgelegt wurde, dass Ihre IP-Adresse bereits für die Versendung von Spam verwendet wurde. Wenn Sie niemals Spam versandt haben, bedeutet dies, dass Ihre IP-Adresse bereits von Spammern verwendet wurde. Sie müssen Ihre IP-Adresse bei Ihrem Internet-Provider ändern und Sie können sich dann auf unserer Webseite registrieren."
 'reg_err_29'        =>  "Leider können Sie keine Kommentare auf unserer Webseite hinterlassen, weil festgelegt wurde, dass Ihre IP-Adresse oder Ihre E-Mail-Adresse bereits für die Versendung von Spam verwendet wurde. Wenn Sie niemals Spam versandt haben, bedeutet dies, dass Ihre IP-Adresse bereits von Spammern verwendet wurde. Sie müssen Ihre IP-Adresse bei Ihrem Internet-Provider ändern und Sie können dann auf unserer Webseite Kommentare hinterlassen."
 'reg_err_34'        =>  "<li>Leider können Sie keine Nachrichten an die Webseite senden, weil festgelegt wurde, dass Ihre IP-Adresse oder Ihre E-Mail-Adresse bereits für die Versendung von Spam verwendet wurde. Wenn Sie niemals Spam versandt haben, bedeutet dies, dass Ihre IP-Adresse bereits von Spammern verwendet wurde. Sie müssen Ihre IP-Adresse bei Ihrem Internet-Provider ändern und Sie können dann auf unserer Webseite Nachrichten senden.</li>"
@@ -433,7 +433,7 @@ $lang = array (
 
 // 9.3
 'change_mail_subj'	=>	"Eine Anfrage zur Änderung der E-Mail-Adresse",
-'change_mail'		=>	"<li>Sehr geehrter Besucher! Sie haben Ihre E-Mail-Adresse geändert. Die Webseite-Verwaltung verlangt, dass alle eingegebenen E-Mail-Adressen real sind. Nach 10 Minuten (möglicherweise früher) erhalten Sie eine E-Mail mit Anweisungen für den nächsten Schritt. Wenn Sie innerhalb dieser Zeit keine E-Mail mit Bestätigung erhalten, ist es wahrscheinlich, dass sie in den Spam-Ordner gewandert ist. Bitte überprüfen Sie den Inhalt dieses Ordners. Wenn dies nicht der Fall ist, wiederholen Sie den Versuch, indem Sie eine andere E-Mail-Adresse verwenden oder sich an die Webseite-Verwaltung wenden.</li>",
+'change_mail'		=>	"<li>Sehr geehrter Benutzer! Sie haben Ihre E-Mail-Adresse geändert. Die Webseite-Verwaltung verlangt, dass alle eingegebenen E-Mail-Adressen real sind. Nach 10 Minuten (möglicherweise früher) erhalten Sie eine E-Mail mit Anweisungen für den nächsten Schritt. Wenn Sie innerhalb dieser Zeit keine E-Mail mit Bestätigung erhalten, ist es wahrscheinlich, dass sie in den Spam-Ordner gewandert ist. Bitte überprüfen Sie den Inhalt dieses Ordners. Wenn dies nicht der Fall ist, wiederholen Sie den Versuch, indem Sie eine andere E-Mail-Adresse verwenden oder sich an die Webseite-Verwaltung wenden.</li>",
 'change_mail_1'		=>	"Sehr geehrter {name}! Ihr Antrag auf die Änderung der E-Mail-Adresse an:",
 'change_mail_2'		=>	"angenommen.",
 'change_mail_3'		=>	"Um Ihre E-Mail-Adresse auf der Webseite zu ändern, müssen Sie die folgende URL durchlaufen:",
@@ -504,7 +504,7 @@ $lang = array (
 // 8.5
 'preview_short'			=>	"Kurze Zusammenfassung:",
 'preview_full'			=>	"Detaillierte Zusammenfassung:",
-'lost_send'			=>	"Sehr geehrter Besucher! Gemäß Ihrer Anfrage wurde Ihnen ein neues Passwort generiert. Dieses Passwort wurde Ihnen auf Ihre E-Mail-Adresse gesendet:",
+'lost_send'			=>	"Sehr geehrter Benutzer! Gemäß Ihrer Anfrage wurde Ihnen ein neues Passwort generiert. Dieses Passwort wurde Ihnen auf Ihre E-Mail-Adresse gesendet:",
 'news_err_40'		=>	"Der Text Ihres Kommentars ist zu kurz und nach Ansicht der Webseite-Verwaltung nicht hilfreich.",
 'news_err_41'		=>	"Sie haben keine Erlaubnis, Artikel in diesem Bereich der Webseite zu veröffentlichen, wählen Sie eine Kategorie aus der verfügbaren Liste aus.",
 'edit_selact'		=>	"-- Aktion --",
@@ -580,7 +580,7 @@ $lang = array (
 'sort_main'	  		=>  "Artikel nach:",
 'sort_by_date'	  	=>  "Datum",
 'sort_by_rating'	=>  "Beliebtheit",
-'sort_by_read'		=>  "Besucherzahl",
+'sort_by_read'		=>  "Benutzerzahl",
 'sort_by_title'		=>  "Alphabetisch",
 'sort_by_comm'		=>  "Kommentare",
 'rules_accept'		=>  "Ich stimme zu",
@@ -720,8 +720,8 @@ $lang = array (
 's_freset'			=>	"Zurücksetzen",
 'static_denied'		=>	"Sie haben nicht genug Rechte, um die ausgewählte Seite anzuzeigen.",
 'i_quote'			=>	"Zitat:",
-'feed_error'		=>	"Besucher, die sich in der Gruppe \"<b>{group}</b>\" befinden, können nur eine Rückmeldung auf der Webseite über die Webseite-Verwaltung senden.",
-'search_denied'		=>	"Besucher, die sich in der Gruppe \"<b>{group}</b>\" befinden, können keine Suche auf der Webseite durchführen.",
+'feed_error'		=>	"Benutzer, die sich in der Gruppe \"<b>{group}</b>\" befinden, können nur eine Rückmeldung auf der Webseite über die Webseite-Verwaltung senden.",
+'search_denied'		=>	"Benutzer, die sich in der Gruppe \"<b>{group}</b>\" befinden, können keine Suche auf der Webseite durchführen.",
 'news_err_id'		=>	"Es wurde keine Artikel-ID angegeben.",
 'comm_req_f'		=>	"Füllen Sie alle erforderlichen Felder aus",
 'ip_block_login'	=>	"Achtung! Sie haben die automatische IP-Sperre für Ihr Konto aktiviert. Der Zugriff auf Ihr Konto über diese Subnetz-Adresse ist verboten.",
@@ -775,7 +775,7 @@ $lang = array (
 'title_date'		=>	"Materialien am",
 'title_stats'		=>	"Statistiken der Webseite",
 'title_addnews'		=>	"Veröffentlichung hinzufügen",
-'title_register'	=>	"Besucherregistrierung",
+'title_register'	=>	"Benutzerregistrierung",
 'title_fav'			=>	"Meine Lesezeichen",
 'title_pm'			=>	"Persönliche Nachrichten",
 'title_feed'		=>	"Rückmeldung",
@@ -911,7 +911,7 @@ $lang = array (
 'search_ok_2'		=>	"Suchergebnisse",
 'search_title'		=>	"Suche auf der Webseite",
 
-'lost_npass'		=>	"Sehr geehrter Besucher! Gemäß Ihrer Anfrage wurde Ihnen ein neues Passwort generiert. Um sich auf der Webseite anzumelden, verwenden Sie die folgenden Daten:",
+'lost_npass'		=>	"Sehr geehrter Benutzer! Gemäß Ihrer Anfrage wurde Ihnen ein neues Passwort generiert. Um sich auf der Webseite anzumelden, verwenden Sie die folgenden Daten:",
 'lost_login'		=>	"Login:",
 'lost_pass'			=>	"Passwort:",
 'lost_info'			=>	"Nach der Anmeldung auf der Webseite können Sie das angegebene Passwort auf ein anderes ändern.",
@@ -919,7 +919,7 @@ $lang = array (
 'lost_err'			=>	"Der Benutzer mit diesem Namen hat keine Anfrage zurückgesetzt oder die diese URL ist veraltet. Es ist nur eine Versuchsanfrage erlaubt, um das Passwort über die an Sie gesendete E-Mail-URL zurückzusetzen. Nachdem Sie es dann erneut anfordern müssen, müssen Sie das Passwort über die E-Mail erneut anfordern",
 'lost_subj'			=>	"Wiederherstellung eines vergessenen Passworts",
 'lost_ms'			=>	"Benachrichtigung gesendet",
-'lost_ms_1'			=>	"Sehr geehrter Besucher! Aufgrund der Tatsache, dass alle Passwörter in verschlüsselter Form gespeichert werden. Auf die E-Mail-Adresse, die Sie bei der Registrierung angegeben haben, wurde eine E-Mail zur Generierung eines neuen Passworts gesendet.",
+'lost_ms_1'			=>	"Sehr geehrter Benutzer! Aufgrund der Tatsache, dass alle Passwörter in verschlüsselter Form gespeichert werden. Auf die E-Mail-Adresse, die Sie bei der Registrierung angegeben haben, wurde eine E-Mail zur Generierung eines neuen Passworts gesendet.",
 'lost_err_1'		=>	"Der Benutzer mit diesem Namen oder E-Mail-Adresse wurde nicht in der Datenbank gefunden",
 
 'news_err_1'		=>	"Sie haben einen zu langen Namen eingegeben.",
@@ -962,7 +962,7 @@ $lang = array (
 'feed_ok_2'			=>	"Ihre Nachricht wurde erfolgreich gesendet.",
 'feed_ok_4'			=>	"Zurück zur Hauptseite.",
 
-'user_mem'			=>	"Besucher",
+'user_mem'			=>	"Benutzer",
 'user_ed'			=>	"Journalist",
 'user_re'			=>	"Redakteur",
 'user_adm'			=>	"Administrator",
@@ -974,7 +974,7 @@ $lang = array (
 'news_iz'			=>	" von ",
 'news_delcom'		=>	"Möchten Sie wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden",
 'news_regus'		=>	"Achtung! Sie haben keine Berechtigung, um den versteckten Text anzuzeigen.",
-'news_info_1'		=>	"Besucher, die sich in der Gruppe <b>{group}</b> befinden, können keine Kommentare zu dieser Veröffentlichung hinterlassen.",
+'news_info_1'		=>	"Benutzer, die sich in der Gruppe <b>{group}</b> befinden, können keine Kommentare zu dieser Veröffentlichung hinterlassen.",
 'news_mail'			=>	"E-Mail senden",
 'news_nomail'		=>	"ausgeblendet",
 'news_noamail'		=>	"Keine E-Mails und Benachrichtigungen von der Webseite erhalten",
