♻️ UPDATE: Aktualisierung der Terminologie von "Veröffentlichungen" zu "Nachrichten"
- Ersetzen Sie alle Vorkommen von "Veröffentlichungen" durch "Nachrichten"
- Aktualisieren Sie die entsprechenden Beschreibungen und Erklärungen, um den Kontext korrekt widerzuspiegeln

--- a/upload/language/German/adminlogs.lng
+++ b/upload/language/German/adminlogs.lng
@@ -142,7 +142,7 @@ $lang_logs = array (
 'admin_logs_action_46'	=>	"Verwendung der Massenbearbeitung von Nachrichten.",
 'admin_logs_action_47'	=>	"Massenversand von Nachrichten",
 'admin_logs_action_48'	=>	"Änderung der Skript-Einstellungen",
-'admin_logs_action_49'	=>	"Möglicher Neuaufbau der Veröffentlichungen",
+'admin_logs_action_49'	=>	"Möglicher Neuaufbau der Nachrichten"
 'admin_logs_action_50'	=>	"Löschung des RSS-Kanals, ID:",
 'admin_logs_action_51'	=>	"Hinzufügen des RSS-Kanals:",
 'admin_logs_action_52'	=>	"Bearbeitung des RSS-Kanals:",
